welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:4: error: ')' expected but ']' found.
    if (nums(i)> max] {max = nums(i)}
                    ^